# Labor_ITEC

./: .gitignore  Aufgabenstellung.html  Aufgabenstellung.md  Aufgabenstellung.qmd  Black_Box_Test_PS.ps1  CHANGELOG  CMakeLists.txt  CSVDATEI.xlsx  CSVDATEI02.csv  PortAuslesen.txt  README.html  README.md  TODO  test.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-multi-platform.yml
assets/: places.csv
cmake/: FetchCMocka.cmake
src/: argument-example.c  c-intro.c  runtime-test-example.c  sort-comp-main.c  text-suche-example.c
src/itec-lib/: editdistance.c  editdistance.h  introsort.c  introsort.h  itec.c  itec.h  mergesort.c  mergesort.h  patternsearch.c  patternsearch.h  quicksort.c  quicksort.h
test/: cmocka-example-main.c  editdistance-test.c  itec-test-main.c  pattern-search-text-main.c  sort-test-main.c
